<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">River</string>
    <string name="version">Alpha 0.9</string>
    
    <string name="menu_receive">Toggle</string>
    <string name="menu_settings">Settings</string>
    
    <string name="layout_homeactivity_write_message">Write message</string>
    
    <string name="layout_setting_banhammerdropped">B&#38; HAMR DROPPED</string>
    
    <string name="layout_user_setup_name">Display name</string>
    <string name="layout_user_setup_details">Your display name will be shown with all of your messages.  Make it whatever you like</string>
    <string name="layout_user_setup_display_name">Choose your name</string>
    <string name="layout_user_setup_yes">Yes, use this name</string>
    <string name="layout_user_setup_no">Don\'t make a name</string>
       
    <string name="preference_summary_banhammer">tl&#59;dr B&#38; HAMR</string>
    <string name="preference_testcase_finaltestcase">Final test case</string>
    <string name="preference_testcase_priority">Priority Scheduling</string>
    <string name="preference_testcase_scheduling">Scheduling</string>
    <string name="preference_title_delete">Delete all messages</string>
    <string name="preference_title_name">Display name</string>
    <string name="preference_title_splash">Splash screen</string>
    <string name="preference_title_testcases">Test Cases</string>
    <string name="preference_title_toggle">Current message mode</string>
    <string name="preference_title_version">Version</string>
    
    <string name="error">error reading database</string>

</resources>
