<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/usersetup_tv_displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_user_setup_name"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/app_color" />

        <TextView
            android:id="@+id/usersetup_tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_user_setup_details"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/usersetup_et_displayname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:ellipsize="end"
            android:hint="@string/layout_user_setup_display_name"
            android:inputType="text"
            android:singleLine="true" />
        
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/usersetup_bu_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layout_user_setup_no"
            android:onClick="noButton" />

        <Button
            android:id="@+id/usersetup_bu_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_color"
            android:text="@string/layout_user_setup_yes"
            android:textColor="@color/white"
            android:onClick="yesButton" />
        
    </LinearLayout>

</LinearLayout>